# modelica_fmu

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
resources/: SimpleModel.fmu  SimpleModel.mo
src/: main.cpp
